<resources>
    <string name="app_name">ListWeatherApp</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="add_data">Add Data</string>
    <string name="log_out">Log Out</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="signin">Sign In</string>
    <string name="clickto_sign">Move To Login Screen</string>
    <string name="continue_txt">Continue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>