<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.AddFragment"
    android:layout_centerInParent="true"
    android:layout_gravity="center"
    android:gravity="center">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:srcCompat="@drawable/ic_baseline_photo_camera_24"
        android:layout_centerInParent="true"
        android:background="@drawable/round_border"
        android:layout_marginBottom="20dp"/>

    <!-- TODO: Update blank fragment layout -->
    <EditText
        android:id="@+id/edittext_firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_below="@id/imageView"/>
    <EditText
        android:id="@+id/edittext_lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_firstname"
        android:hint="@string/password"/>
    <EditText
        android:id="@+id/edittext_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_address"
        android:layout_below="@id/edittext_lastname"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_below="@id/edittext_email"
        android:layout_margin="30dp">
    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_weight="1"
        android:layout_marginRight="10dp"/>
    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_weight="1"
        android:layout_marginLeft="10dp"/>
    </LinearLayout>

</RelativeLayout>