<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.LoginFragment"
    android:layout_centerInParent="true"
    android:gravity="center"
    android:layout_margin="30dp">

    <!-- TODO: Update blank fragment layout -->


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/all_inclusive"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"/>
<EditText
    android:id="@+id/edittext_username"
    android:layout_width="match_parent"
    android:hint="@string/username"
    android:layout_height="wrap_content"
    android:layout_marginVertical="10dp"
    android:layout_below="@id/imageView"/>
    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="match_parent"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_username"
        android:layout_marginVertical="10dp"/>
    <Button
        android:id="@+id/btn_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        android:layout_below="@id/edittext_password"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:textStyle="bold"/>

</RelativeLayout>